// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render the logo 1`] = `
<React.Fragment>
  <Logo />
  <Connect(Search)
    active={false}
  />
</React.Fragment>
`;

exports[`<Content /> should render the title 1`] = `
<React.Fragment>
  <Connect(Title)
    onClick={[Function]}
  />
  <Connect(Search)
    active={false}
  />
</React.Fragment>
`;
